--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "repos": [
     {
-      "id": "boltcards",
-      "organisation": "lnbits",
-      "repository": "boltcards"
+      "id": "Nostr IRL Auth",
+      "organisation": "blackcoffeexbt",
+      "repository": "nostr-nfc-auth"
     }
   ]
 }
