Update config and icon

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bolt Cards",
-  "short_description": "Self custody Bolt Cards with one time LNURLw",
-  "tile": "/boltcards/static/image/boltcard.png",
+  "name": "Nostr IRL Auth",
+  "short_description": "Use NFC tags for IRL Nostr Authentication",
+  "tile": "/nostr-nfc-auth/static/image/icon.png",
   "min_lnbits_version": "0.12.5",
   "contributors": [
     {
