--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     {
       "id": "nostrnfcauth",
       "organisation": "blackcoffeexbt",
-      "repository": "nostr-nfc-auth"
+      "repository": "nostrnfcauth"
     }
   ]
 }
